changed styling to prevent need for overflow property in probe

--- a/src/app/widgets/Rotary/index.styl
+++ b/src/app/widgets/Rotary/index.styl
@@ -88,6 +88,7 @@
 .rotary-axis-wrapper {
     display: flex;
     gap: 1rem;
+    position: absolute;
 
     @media (max-width: 1230px) {
         flex-wrap: wrap;
